--- a/content/threadlist.html
+++ b/content/threadlist.html
@@ -6,8 +6,8 @@
    	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>maniac forum | threadlist</title>
 	<link rel="stylesheet" type="text/css" href="css/pxmboard.css"/>
-    <script type="text/javascript" src="js/jquery-1.10.2.min.js"></script>
-    <script type="text/javascript" src="js/pxm.js"></script>
+    <!--script type="text/javascript" src="js/jquery-1.10.2.min.js"></script-->
+    <!--script type="text/javascript" src="js/pxm.js"></script-->
 	<script type="text/javascript">
 	<!--
 
